feat: update spa
