# hCommenter.Spa/src/api/models/index.ts
@@ -1,4 +1,3 @@
-export * from './new-comment';
 export * from './paginated';
 export * from './pagination-data';
 export * from './view-comment';
