# hCommenter.Spa/src/api/models/view-comment.ts
@@ -1,69 +1,15 @@
-/* tslint:disable */
-/* eslint-disable */
-/**
- * hCommenter.API
- * An API for creating and retrieving conversation comments.
- *
- * The version of the OpenAPI document: 1.0
- * 
- *
- * NOTE: This class is auto generated by OpenAPI Generator (https://openapi-generator.tech).
- * https://openapi-generator.tech
- * Do not edit the class manually.
- */
-
-
-// May contain unused imports in some cases
-// @ts-ignore
-import type { Paginated } from './paginated';
-
-/**
- * 
- * @export
- * @interface ViewComment
- */
 export interface ViewComment {
-    /**
-     * 
-     * @type {number}
-     * @memberof ViewComment
-     */
-    'id': number;
-    /**
-     * 
-     * @type {string}
-     * @memberof ViewComment
-     */
-    'created': string;
-    /**
-     * 
-     * @type {string}
-     * @memberof ViewComment
-     */
-    'message': string;
-    /**
-     * 
-     * @type {number}
-     * @memberof ViewComment
-     */
-    'score': number;
-    /**
-     * 
-     * @type {Paginated}
-     * @memberof ViewComment
-     */
-    'replies'?: Paginated;
-    /**
-     * 
-     * @type {string}
-     * @memberof ViewComment
-     */
-    'authorName': string;
-    /**
-     * 
-     * @type {string}
-     * @memberof ViewComment
-     */
-    'conversationUrl': string;
+    id: number;
+    created: string;
+    message: string;
+    score: number;
+    authorName: string;
+    conversationUrl: string;
+    replies?: {
+        info: ViewComment[];
+        pagination: {
+            totalReplies: number;
+            cursor: number;
+        };
+    };
 }
-
